package com.indigobio.test;

message Everything {
  required int32 f_int32 = 1;
  required int64 f_int64 = 2;
  required uint32 f_uint32 = 3;
  required uint64 f_uint64 = 4;
}
